# wc

./: .air.toml  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: go.yaml
api/: queries.go  routes.go  server.go  server_test.go
cmd/: api.go  database.go  root.go
db/: db.go  import.go  options.go
db/load/: load.go  load_test.go
db/load/utils/: utils.go  utils_test.go
db/models/: countries.go  matches.go  models.go  shared.go  tags.go  users.go  users_test.go
db/utils/: utils.go
helpers/: main.py
storage/: matches.yaml  players.yaml
testing/: players.yaml  teams.yaml  testing.go
version/: version.go
web/: server.go
web/api/: api.go  api_test.go  queries.go  routes.go  server.go  server_test.go
web/auth/: auth.go  auth_test.go  csrf.go  kdf.go  login_out.go  session.go
web/exceptions/: exceptions.go
web/frontend/: frontend.go  frontend_test.go
web/frontend/assets/: main.js
web/frontend/templates/: about.go.html  home.go.html  home.go.tmpl  index.go.tmpl  login.go.html  login.go.tmpl  profile.go.html  register.go.html  register.go.tmpl  shared.go.html  shared.go.tmpl  user_state.go.html  user_state.go.tmpl
